@startuml
'https://plantuml.com/class-diagram

skinparam linetype ortho

' Classes
' =======

class Item {
    + id: UUID
    + name: String
    + description: String
    + price: Double
    + category: Category
}

class Category {
    + id: UUID
    + name: String
    + description: String
}

class Meal {
    + id: UUID
    + name: String
    + description: String
}

class MealCategory {
    + menu: Meal
    + category: Category
    + maxItems: Int
}

class MealCategoryItem {
    + item: Item
    + menuCategory: MealCategory
    + additionalPrice: Double
}

class Order {
    + id: UUID
    + table: Table
    + items: List<OrderItem>
    + meals: List<OrderMealItem>
}

class OrderItem {
    + id: UUID
    + order: Order
    + item: Item?
    + quantity: Int
}

class OrderMeal {
    + id: UUID
    + order: Order
    + items: List<MealCategoryItem>
    + quantity: Int
}

class User {
    + id: UUID
    + firstname: String
    + lastname: String
}

class Credentials {
    + id: UUID
    + username: String
    + password: String
}

class Table {
    + id: UUID,
    + number: Int
}

' Relations
' =========


Category "1" - "*" Item

Category "*" -- "*" Meal

MealCategory ... (Category, Meal)

Item "1..*" - "*" MealCategory

MealCategoryItem ... (Item, MealCategory)

OrderItem "*" --- "0..1" Item

Order "*" - "1" User

OrderItem "*" - "1" Order

OrderMeal "*" -- "1" Order

OrderMeal "*" -- "*" MealCategoryItem

Table "1" - "*" Order

User "1" - "1" Credentials

@enduml